# bug-shine

./: Cargo.toml  README.md  notes.md
src/: constants.rs  main.rs  world.rs
